--- a/debugme/app/src/main/AndroidManifest.xml
+++ b/debugme/app/src/main/AndroidManifest.xml
@@ -24,6 +24,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        
+
+ <activity android:name=".VisitUserProfileActivity"></activity>
+        <activity android:name=".ViewFullImageActivity" />
+        <activity android:name=".SayAnswer"/>
+        <activity android:name=".MakeAnswers" />
+        <activity android:name=".ViewPosts" />
+        <activity android:name=".MessageChatActivity" />
+        <activity android:name=".MainChat" />
+        <activity android:name=".ForgotPasswordActivity" />
+        <activity android:name=".OTPActivity" />
         <activity
             android:name=".RegisterActivity"
             android:launchMode="singleTop"
@@ -42,9 +53,6 @@
         <activity
             android:name=".EditProfile"
             android:launchMode="singleInstance" />
-        <activity
-            android:name=".LauncherActivity"
-            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
